Archive/a6e7d560642c9c0b8fb65086bf8f6af2-a4286dab954ca44891e920524d97c1aa/output
main.cpp:2:5: error: 'Uniform' does not name a type
     Uniform& operator[](std:string name) {
     ^
main.cpp:11:1: error: expected ';' after class definition
 }
 ^
